--- a/src/app/cartao-credito/cartao-credito.component.scss
+++ b/src/app/cartao-credito/cartao-credito.component.scss
@@ -56,11 +56,12 @@ a {
 
 .img-bandeira-cartao {
     width: 50px;
+    margin-right: 5px;
 }
 
 .card-title {
     font-weight: bold;
-    margin-top: 10px;
+    // margin-top: 10px;
     font-size: 16px;
 }
 
@@ -71,4 +72,48 @@ a {
 .header-modal-despesas-cc {
     display: flex;
     flex-direction: column;
+}
+
+.header-card-conta {
+    display: flex;
+    flex-direction: row;
+    // border-bottom: solid 0.5px #e0e0e0;
+    // padding-bottom: 5px;
+    // margin-bottom: 5px;
+    justify-content: space-between;
+    p {
+        margin-left: 5px;
+        font-weight: bold;
+        margin-bottom: 0;
+    }
+    label {
+        margin-left: 5px;
+    }
+}
+
+.header--1 {
+    display: flex;
+    align-items: flex-start;
+    // flex-direction: column;
+}
+
+.align-dropdown {
+    margin-right: -8px;
+    a {
+        color: #868686
+    }
+}
+
+.dropdown-item.active,
+.dropdown-item:active {
+    background-color: #efefef;
+}
+
+.dropdown-item {
+    cursor: pointer;
+}
+
+.dropdown-toggle::after {
+    border: none;
+    margin-left: 0;
 }
