--- a/src/app/conta/conta.component.html
+++ b/src/app/conta/conta.component.html
@@ -11,12 +11,25 @@
 
         <div class="card-conta">
             <div class="header-card-conta">
-                <div>
-                    <p>{{$any(conta).banco}}</p>
-                    <label>{{$any(conta).nome}}</label>
+                <div class="header--1">
+                    <img class="img-banco" src="/assets/images/{{$any(conta).banco}}.png" alt="">
+                    <div>
+                        <p>{{$any(conta).banco}}</p>
+                        <label>{{$any(conta).nome}}</label>
+                    </div>
                 </div>
-                <img class="img-banco" src="/assets/images/{{$any(conta).banco}}.png" alt="">
 
+                <div>
+                    <div class="dropdown align-dropdown">
+                        <a class=" dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                            <span class="material-icons"> more_vert </span></a>
+
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#modalEditConta" (click)="editConta($any(conta)._id)">Editar</a></li>
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#ConfirmarExclusãoDespesa" (click)="deleteContaInfo($any(conta)._id,$any(conta).nome,$any(conta).banco)">Excluir</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <div class="valores-conta">
                 <div>
@@ -36,6 +49,61 @@
     </div>
     <!-- </div> -->
 </div>
+
+<!-- MODAL EDIÇÃO CONTA -->
+<div id="modal" class="modal fade modal-fullscreen-md-down" id="modalEditConta" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Nova conta</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="formadicionarConta">
+                    <!-- <label for="conta-saldo">Saldo:</label>
+                  <input type="text" id="conta-saldo" class="form-control" formControlName="saldo"> -->
+                    <div class="row">
+                        <div class="mb-3 col ">
+                            <label for="conta-name " class="col-form-label">Nome:</label>
+                            <input type="text " class="form-control " id="conta-name " formControlName="nome" maxlength="10">
+                        </div>
+                        <div class="mb-3 col ">
+                            <label for="conta-instituicao " class="col-form-label ">Instituição financeira:</label>
+                            <select type="select " class="form-control form-select " id="conta-instituicao " formControlName="banco">
+                          <option selected>Selecione</option>
+                          <option>Santander</option>
+                          <option>Nubank</option>
+                          <option>Banco do Brasil</option>
+                          <option>BV</option>
+                          <option>Bradesco</option>
+                          <option>C6</option>
+                        </select>
+                        </div>
+                    </div>
+                    <div class="row ">
+                        <div class="mb-3 col ">
+                            <label for="conta-tipo " class="col-form-label ">Tipo:</label>
+                            <select type="select " class="form-control form-select " id="conta-tipo " formControlName="tipo">
+                              <option selected>Selecione</option>
+                              <option>Conta corrente</option>
+                              <option>Conta poupança</option>
+                            </select>
+                        </div>
+                        <div class="mb-3 col ">
+                            <label for="message-text " class="col-form-label ">Descrição:</label>
+                            <textarea class="form-control " id="message-text " formControlName="descricao"></textarea>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer ">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button " class="btn btn-primary" data-bs-dismiss="modal" (click)="updateConta(updateContaInfo)">Atualizar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!-- MODAL CADASTRO CONTA -->
 <div id="modal" class="modal fade modal-fullscreen-md-down" id="modalConta" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -86,6 +154,66 @@
             <div class="modal-footer ">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                 <button type="button " class="btn btn-primary" data-bs-dismiss="modal" (click)="criarConta()">Salvar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade" id="ConfirmarExclusãoDespesa" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 *ngIf="!successDelete && !errorDelete" class="modal-title" id="exampleModalLabel">Tem certeza que deseja excluir?</h2>
+                <h2 *ngIf="successDelete" class="modal-title title-success" id="exampleModalLabel">Sucesso!</h2>
+                <h2 *ngIf="errorDelete" class="modal-title title-error" id="exampleModalLabel">Não foi possível deletar, tente novamente mais tarde.</h2>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div *ngIf="!successDelete && !errorDelete" id="itensDell">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Nome da conta</th>
+                                <th scope="col">Banco</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+
+                            <tr>
+                                <td scope="row">{{contaNome}}</td>
+                                <td>{{contaBanco}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div *ngIf="successDelete" id="successDel" class="centralizar-icon">
+                    <div class="sa">
+                        <div class="sa-success">
+                            <div class="sa-success-tip"></div>
+                            <div class="sa-success-long"></div>
+                            <div class="sa-success-placeholder"></div>
+                            <div class="sa-success-fix"></div>
+                        </div>
+                    </div>
+                </div>
+                <div *ngIf="errorDelete" id="errorDel" class="centralizar-icon">
+                    <div class="sa">
+                        <div class="sa-error">
+                            <div class="sa-error-x">
+                                <div class="sa-error-left"></div>
+                                <div class="sa-error-right"></div>
+                            </div>
+                            <div class="sa-error-placeholder"></div>
+                            <div class="sa-error-fix"></div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="zerarVariaveis()">Fechar</button>
+                <button *ngIf="!successDelete && !errorDelete" type="button" class="btn btn-danger" (click)="deleteConta(DeleteId)">Deletar</button>
             </div>
         </div>
     </div>
