--- a/src/app/cartao-credito/cartao-credito.component.html
+++ b/src/app/cartao-credito/cartao-credito.component.html
@@ -19,14 +19,16 @@
                                     <span class="material-icons"> more_vert </span></a>
 
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                    <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#modalEditConta">Editar</a></li>
-                                    <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#ConfirmarExclusãoDespesa">Excluir</a></li>
+                                    <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#modalCartaoEdit" (click)="editCartao($any(cc)._id)">Editar</a></li>
+                                    <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#ConfirmarExclusãoDespesa" (click)="excluiCartaoInfo($any(cc)._id, $any(cc).nome, $any(cc).bandeira, $any(cc).limite)">Excluir</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <!-- <p>{{$any(cc)._id}}</p> -->
-                    <p class="card-text">Informações sobre o cartão aqui.</p>
+                    <p class="card-text">Limite: {{$any(cc).limite | currency: 'BRL'}}</p>
+                    <p class="card-text">Total em despesas: ---</p>
+
                     <a (click)="abrirModalAddDespesaCC($any(cc).bandeira,$any(cc)._id)" data-bs-toggle="modal" data-bs-target="#modalCartao" data-bs-whatever="@mdo" class="card-link">Adicionar despesa</a>
                     <a (click)="exibirFatura($any(cc).nome,$any(cc).bandeira,$any(cc)._id)" class="card-link " data-bs-toggle="modal" data-bs-target="#modalFatura">Ver despesa</a>
                     <!-- <a href="#" class="card-link">Another link</a> -->
@@ -106,6 +108,73 @@
     </div>
 </div>
 
+<!-- MODAL EDIT CARTAO DE CREDITO -->
+<div id="modal" class="modal fade modal-fullscreen-md-down" id="modalCartaoEdit" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title" id="exampleModalLabel">Novo cartão</h3>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="formAdicionarCartao">
+                    <label for="conta-saldo">Nome:</label>
+                    <input type="text" id="conta-saldo" class="form-control" formControlName="nome">
+
+                    <div class="row">
+                        <div class="mb-3 col ">
+                            <label for="conta-name " class="col-form-label">Limite:</label>
+                            <input type="text" currencyMask class="form-control" id="conta-name " formControlName="limite" maxlength="15">
+                        </div>
+                        <div class="mb-3 col dropdown">
+                            <label for="conta-name " class="col-form-label">Bandeira:</label>
+                            <select class="form-select" aria-label="Default select example" formControlName="bandeira">
+                            <option selected>Selecione</option>
+                            <option value="MasterCard">Master</option>
+                            <option value="visa">Visa</option>
+                            <option value="hipercard">HiperCard</option>
+                            <option value="amex">Amex</option>
+                          </select>
+
+                        </div>
+                    </div>
+                    <div class="row ">
+                        <div class="mb-3 col ">
+                            <label for="conta-tipo " class="col-form-label ">Conta:</label>
+                            <select type="select " class="form-control form-select " id="conta-tipo " formControlName="banco">
+                              <option selected value="carteira">Carteira</option>
+                              <option *ngFor="let ls of listaCB" value="{{$any(ls).nome}}-{{$any(ls)._id}}">{{$any(ls).nome}} - {{$any(ls).banco}}</option>
+                            </select>
+                        </div>
+                        <div class="mb-3 col ">
+                            <label for="message-text " class="col-form-label ">Descrição:</label>
+                            <textarea class="form-control " id="message-text " formControlName="descricao"></textarea>
+                        </div>
+                    </div>
+
+                    <div class="row ">
+                        <div class="mb-3 col ">
+                            <label for="cartao-dataFechamentoFatura" class="col-form-label ">Data fechamento da fatura:</label>
+                            <input type="date" class="form-control " id="cartao-dataFechamentoFatura" formControlName="dataFechamentoFatura">
+                        </div>
+                        <div class="mb-3 col ">
+                            <label for="cartao-dataVencimentoFatura" class="col-form-label ">Data vencimento da fatura:</label>
+                            <input type="date" class="form-control " id="cartao-dataVencimentoFatura" formControlName="dataVencimentoFatura">
+                        </div>
+                    </div>
+
+                    <div class="row">
+
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer ">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="updateCartao(deleteCc)">Atualizar</button>
+            </div>
+        </div>
+    </div>
+</div>
 <!-- MODAL CADASTRO CARTAO DE CREDITO -->
 <div id="modal" class="modal fade modal-fullscreen-md-down" id="modalCartaoCadastro" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -214,6 +283,67 @@
     </div>
 </div>
 
+<!-- Modal excluir cartao -->
+<div class="modal fade" id="ConfirmarExclusãoDespesa" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 *ngIf="!successDelete && !errorDelete" class="modal-title" id="exampleModalLabel">Tem certeza que deseja excluir?</h2>
+                <h2 *ngIf="successDelete" class="modal-title title-success" id="exampleModalLabel">Sucesso!</h2>
+                <h2 *ngIf="errorDelete" class="modal-title title-error" id="exampleModalLabel">Não foi possível deletar, tente novamente mais tarde.</h2>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div *ngIf="!successDelete && !errorDelete" id="itensDell">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Cartão</th>
+                                <th scope="col">Bandeira</th>
+                                <th scope="col">Limite</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+
+                            <tr>
+                                <td scope="row">{{nomeCc}}</td>
+                                <td>{{bandeiraCc}}</td>
+                                <td>{{limiteCc | currency: 'BRL'}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div *ngIf="successDelete" id="successDel" class="centralizar-icon">
+                    <div class="sa">
+                        <div class="sa-success">
+                            <div class="sa-success-tip"></div>
+                            <div class="sa-success-long"></div>
+                            <div class="sa-success-placeholder"></div>
+                            <div class="sa-success-fix"></div>
+                        </div>
+                    </div>
+                </div>
+                <div *ngIf="errorDelete" id="errorDel" class="centralizar-icon">
+                    <div class="sa">
+                        <div class="sa-error">
+                            <div class="sa-error-x">
+                                <div class="sa-error-left"></div>
+                                <div class="sa-error-right"></div>
+                            </div>
+                            <div class="sa-error-placeholder"></div>
+                            <div class="sa-error-fix"></div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="zerarVariaveis()">Fechar</button>
+                <button *ngIf="!successDelete && !errorDelete" type="button" class="btn btn-danger" (click)="excluirCartao(idDeleteCC)">Deletar</button>
+            </div>
+        </div>
+    </div>
+</div>
 <!--
 <div class="row">
     <div class="col-4">
