--- a/src/app/despesa/despesa.component.html
+++ b/src/app/despesa/despesa.component.html
@@ -10,6 +10,7 @@
         <thead>
             <tr>
                 <th scope="col">Valor</th>
+                <th scope="col">Conta</th>
                 <th scope="col">descrição</th>
                 <th scope="col">Fixa?</th>
                 <th scope="col">Status</th>
@@ -21,6 +22,7 @@
             <tr *ngFor="let d of despesas">
                 <!-- <th scope="row">1</th> -->
                 <th>{{$any(d).valor | currency: 'BRL'}} </th>
+                <td>{{$any(d).conta}}</td>
                 <td>{{$any(d).descricao}}</td>
                 <td>{{$any(d).fixa}}</td>
                 <td>{{$any(d).status}}</td>
