--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -273,6 +273,33 @@ h1 {
     color: red;
 }
 
+.display-name-child {}
+
+.email-child {
+    font-size: 12px;
+    margin-top: -22px;
+}
+
+.info-child {
+    cursor: auto !important;
+    display: block;
+    width: 100%;
+    padding: .25rem 1rem;
+    clear: both;
+    font-weight: 400;
+    color: #212529;
+    text-align: inherit;
+    text-decoration: none;
+    white-space: nowrap;
+    background-color: transparent;
+    border: 0;
+}
+
+.info-child:hover {
+    color: #1e2125;
+    background-color: #f8f9fa;
+}
+
 // Success icon
 .sa {
     margin-left: auto;
